# timeseries-db

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: CMakeLists.txt  intervals.csv
assets/benchmarking/: CMakeLists.txt  benchmark.cpp  generate_data.py  generate_intervals.py
src/: CMakeLists.txt  chunk.cpp  chunk.h  chunk_file.cpp  chunk_manager.cpp  chunk_object.cpp  chunk_tree.cpp  cli.cpp  config.h  datapoint.h  db.cpp  db.h  main.cpp  table.cpp  table.h  tree.cpp  tree.h  utils.h
src/include/: chunk.h  chunkfile.h  chunkfilemetadata.h  cli.h  config.h  datapoint.h  db.h  query.h  table.h  tree.h  utils.h
tests/: CMakeLists.txt  test_basic.cpp  test_data.csv  test_insert.cpp
